# conductor

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_environment_profiles.sql  003_loop_steps.sql  004_parallel_groups.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/engine/: evaluator.rs  interpolator.rs  mod.rs  runner.rs
backend/src/models/: condition.rs  mod.rs  profile.rs  project.rs  step.rs  workflow.rs
backend/src/routes/: conditions.rs  mod.rs  profiles.rs  projects.rs  runs.rs  steps.rs  workflows.rs  yaml.rs
docs/plans/: 2026-03-20-conductor-design.md  2026-03-20-conductor-implementation.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  conditions.ts  profiles.ts  projects.ts  runs.ts  steps.ts  workflows.ts  yaml.ts
frontend/src/components/: ConditionGate.tsx  ParallelGroup.tsx  ProfileManager.tsx  ProjectCard.tsx  RunHistory.tsx  RunStepCard.tsx  StartupVarsModal.tsx  StepCard.tsx  StepConfigPanel.tsx  ThemeToggle.tsx
frontend/src/pages/: Dashboard.tsx  ProjectPage.tsx  RunPage.tsx  RunView.tsx  WorkflowEditor.tsx
